[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CavesWorldEffect.tres" type="Environment" id=2]
[ext_resource path="res://Assets/Art/HellSet.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/DemonMouth.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Art/Envirement/Hell/HadesInChair.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Envirement/Hell/goul.png" type="Texture" id=6]
[ext_resource path="res://Scenes/CaveBG.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/LevelChanger.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Art/UI/Slider2.png" type="Texture" id=10]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=11]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.6004, 31.1117 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.68871, 1.39819 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1370.04, 54.871 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "goul"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.68871, 1.44708 ), Vector2( 1.68871, 1.50958 ), Vector2( 1.68871, 1.44708 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1370.04, 54.871 ), Vector2( 1370.04, 53.3066 ), Vector2( 1370.04, 54.871 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "MoveR"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, -54 ), Vector2( 1212, -61 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, -54 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}

[node name="Dungeon" type="Node2D"]
script = ExtResource( 1 )

[node name="CaveBg5" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 545, -135 )
scale = Vector2( 4.96477, 7.00905 )
z_index = -10

[node name="Background" type="TileMap" parent="."]
self_modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -65535, 1073741828, 0 )

[node name="WalkingTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131056, 1, 0, -65522, 1, 0, 11, 1, 0, 20, 1, 0, 65544, 1, 0, 65560, 1, 0, 65564, 1, 0, 65568, 1, 0, 65573, 1, 0, 131077, 1, 0, 131111, 1, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0 )

[node name="WallTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -589775, -1073741823, 0, -524239, -1073741823, 0, -458703, -1073741823, 0, -393167, -1073741823, 0, -327631, -1073741823, 0, -262095, -1073741823, 0, -196559, -1073741823, 0, -131023, -1073741823, 0, -65487, -1073741823, 0, 49, -1073741823, 0, 65585, -1073741823, 0, 131121, -1073741823, 0, 196657, -1073741823, 0 )

[node name="DeathTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589817, 1610612741, 0, -589816, 1610612741, 0, -589815, 1610612741, 0, -589814, 1610612741, 0, -589813, 1610612741, 0, -589812, 1610612741, 0, -589811, 1610612741, 0, -589810, 1610612741, 0, -589809, 1610612741, 0, -589808, 1610612741, 0, -589807, 1610612741, 0, -589806, 1610612741, 0, -589805, 1610612741, 0, -589804, 1610612741, 0, -589803, 1610612741, 0, -589802, 1610612741, 0, -589801, 1610612741, 0, -589800, 1610612741, 0, -589799, 1610612741, 0, -589798, 1610612741, 0, -589797, 1610612741, 0, -589796, 1610612741, 0, -589795, 1610612741, 0, -589794, 1610612741, 0, -589793, 1610612741, 0, -589792, 1610612741, 0, -589791, 1610612741, 0, -589790, 1610612741, 0, -589789, 1610612741, 0, -589788, 1610612741, 0, -589787, 1610612741, 0, -589786, 1610612741, 0, -589785, 1610612741, 0, -589784, 1610612741, 0, -589783, 1610612741, 0, -589782, 1610612741, 0, -589781, 1610612741, 0, -589780, 1610612741, 0, -589779, 1610612741, 0, -589778, 1610612741, 0, -589777, 1610612741, 0, -589776, 1610612741, 0, -589775, 1610612741, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 131097, 5, 0, 131098, 5, 0, 131099, 5, 0, 131100, 5, 0, 131101, 5, 0, 131102, 5, 0, 131103, 5, 0, 131104, 5, 0, 131105, 5, 0, 131106, 5, 0, 131107, 5, 0, 131108, 5, 0, 131109, 5, 0, 131110, 5, 0 )

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="EnvirementProps" type="Node" parent="."]

[node name="DemonMouth" parent="EnvirementProps" instance=ExtResource( 4 )]
position = Vector2( 25, 29 )
offset = Vector2( 100, 0 )
flip_h = true

[node name="HadesInChair" type="Sprite" parent="EnvirementProps"]
position = Vector2( 1486, -29 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="EnvirementProps"]
position = Vector2( 912, -20 )
scale = Vector2( 0.764336, 4.93465 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnvirementProps/Area2D"]
shape = SubResource( 3 )

[node name="Goul" type="Sprite" parent="EnvirementProps"]
position = Vector2( 1370.04, 54.871 )
scale = Vector2( 1.68871, 1.39819 )
texture = ExtResource( 6 )

[node name="talk" type="Label" parent="EnvirementProps/Goul"]
visible = false
margin_left = -39.1068
margin_top = -87.9709
margin_right = 147.893
margin_bottom = 14.0291
rect_scale = Vector2( 0.421856, 0.555901 )
theme = ExtResource( 11 )
text = "Press F To Talk"
align = 1
valign = 1
autowrap = true

[node name="GoulArea2D" type="Area2D" parent="EnvirementProps/Goul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnvirementProps/Goul/GoulArea2D"]
position = Vector2( -12.5964, -2.50323 )
scale = Vector2( 1, 1 )
z_index = 4
shape = SubResource( 4 )

[node name="FToTalkSprite" type="Sprite" parent="EnvirementProps/Goul"]
position = Vector2( 1.16138, -43.6278 )
scale = Vector2( 0.467436, 0.555876 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="EnvirementProps/Goul/FToTalkSprite"]
margin_left = -39.2721
margin_top = -12.8664
margin_right = 83.7279
margin_bottom = 19.1336
rect_scale = Vector2( 0.638126, 0.821615 )
theme = ExtResource( 11 )
text = "Press F To Talk"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnvirementProps/Goul"]
autoplay = "goul"
anims/RESET = SubResource( 6 )
anims/goul = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 33, 80 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, -54 )
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
anims/MoveR = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="LevelChanger2" parent="." instance=ExtResource( 9 )]
position = Vector2( -1163, 600 )
scale = Vector2( 376.823, -0.83645 )
levelType = 2

[connection signal="body_entered" from="EnvirementProps/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="EnvirementProps/Goul/GoulArea2D" to="." method="_on_GoulArea2D_body_entered"]
[connection signal="body_exited" from="EnvirementProps/Goul/GoulArea2D" to="." method="_on_GoulArea2D_body_exited"]
